test.html changed

--- a/test.html
+++ b/test.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test page</title>
+    <title>Название сайта</title>
 </head>
 <body>
-    <p></p>
+<h1>Заголовок над текстом</h1>
+    <p>Куча текста</p>
 </body>
 </html>
